# python3-app2menu

./: pyproject.toml  setup.py
debian/: app2menu-helper.install  app2menu-helper.pkexec  changelog  control  rules
helper/: app2menu-helper.py
src/: App2Menu.py
src/app2menu/: App2Menu.py
