[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name='app2menu'
version="0.4"
description='python module for xdg desktop extended functionality'
authors=[
  {name='Lliurex Team'},
  {name="juanma1980",email='juanma1980@gmail.com'},
  ]
requires-python=">=3.8"
keywords=['software','desktop','development']
license= {text='GPL-3'}
classifiers=[
  "Programming Language :: Python :: 3",
  ]
dependencies=[
  "requests",
  "xdg",
  ]

